--- a/exercise1/stargate-ui/src/app/app.html
+++ b/exercise1/stargate-ui/src/app/app.html
@@ -175,7 +175,7 @@
                 <footer class="duty-foot">
                   <!-- No astronaut records -->
                   <span class="pill pill-muted" *ngIf="!(p?.currentDutyTitle) && !(p?.careerStartDate)">
-                    No Astronaut Assignment
+                    No Astronaut Duty
                   </span>
 
                   <!-- Completed -->
